Отключил отображение PHP ошибок (в целях безопасности) через .htaccess, поправил некоторые css-стили

--- a/.htaccess
+++ b/.htaccess
@@ -3,3 +3,9 @@ RewriteEngine On
 
 #RewriteRule ^(login|logout|profile)$ /$1.php [R=301,L]
 RewriteRule ^([0-9A-Za-z-]+)/?$ /index.php?url=$1 [L,QSA]
+
+php_flag display_startup_errors off
+php_flag display_errors off
+php_flag html_errors off
+php_value docref_root 0
+php_value docref_ext 0
